# LiniTunes

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: linux_appimage.yml
LiniTunes/: CMakeLists.txt  LiniTunes.pro  Stroke.qml  backup_info.cpp  backup_info.h  backup_validator.cpp  backup_validator.h  backup_worker.cpp  backup_worker.h  files.qml  general.qml  idevice.cpp  idevice.h  idevices.qml  idevicewatcher.cpp  idevicewatcher.h  images.qrc  liniTunes_device.cpp  liniTunes_device.h  linitunes_device.cpp  linitunes_device.h  main.cpp  main.qml  plist_helpers.h  qmldir  resources.qrc  ressource.qrc  storage_info.cpp  storage_info.h  storage_sync_worker.cpp  storage_sync_worker.h  test.qml  thememanager.cpp  thememanager.h
LiniTunes/qml/components/: AppButton.qml  AppTooltip.qml  Card.qml  ModalPanel.qml  PasswordField.qml  StorageSegment.qml  StorageStrokeContainer.qml  StorageTooltip.qml  qmldir
linux/: linitunes.desktop
